--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,4 @@
 providers:
-  - tag: "local"
-    name: "Local Virtuoso"
-    type: sparql
-    url: "http://localhost:8080/sparql/"
-    graph_uri: "http://data.dai.uom.gr:8890/CPSV-AP"
-
   - tag: "uom.gr"
     name: "Data Dai Virtuoso"
     type: sparql
@@ -16,3 +10,9 @@ providers:
     type: sparql
     url: "https://sparql.geomat.dev"
     graph_uri: "http://data.dai.uom.gr:8890/CPSV-AP"
+
+#  - tag: "local"
+#    name: "Local Virtuoso"
+#    type: sparql
+#    url: "http://localhost:8080/sparql/"
+#    graph_uri: "http://data.dai.uom.gr:8890/CPSV-AP"
