--- a/config.yaml
+++ b/config.yaml
@@ -5,8 +5,8 @@ providers:
     url: "http://data.dai.uom.gr:8890/sparql"
     graph_uri: "http://data.dai.uom.gr:8890/CPSV-AP"
 
-#  - tag: "local"
-#    name: "Local Virtuoso"
-#    type: sparql
-#    url: "http://localhost:8080/sparql/"
-#    graph_uri: "http://data.dai.uom.gr:8890/CPSV-AP"
+  - tag: "local-mitos"
+    name: "Local Virtuoso With Mitos Data"
+    type: sparql
+    url: "http://localhost:8080/sparql/"
+    graph_uri: "https://mitos.gov.gr:8890/"
